repair layout problems + top link

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -221,6 +221,24 @@ p {
   justify-content: center;
 }
 
+#top-link-small {
+  text-align: right;
+  margin-right: 20px;
+  padding-bottom: 25px;
+
+  img {
+    width: 25px;
+    height: 25px;
+  }
+
+  a {
+    text-decoration: none;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
 #top-link {
   text-align: right;
   margin-right: 20px;
